[project]
name = "milo_codex"
version = "0.1.0"
description = "Minimal Input Life Organizer"
authors = [
    {name = "rami guzlan"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pytest = "^8.4.0"

